--- a/sample-app-angular/angular.json
+++ b/sample-app-angular/angular.json
@@ -23,7 +23,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "../sample-app-server/www",
+            "outputPath": "sample-app-server/www",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
